tests/snapshots/assets__check_file@unit-comment-comment-in-chain-call.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-chain-call.typ
snapshot_kind: text
---
#{
  a.b(1)(2).c.d(3)


  a // 1
    .b(1)(2) // 2
    // 3
    /* 4 */
    ./* 5 */c /* 6 */ /* 7 */
    .d(3) // 8


  /* 0 */
  a /* 1 */
    /* 2 */
    .b(1)(2) /* 3 */
    .c // 4
    /* 5 */
    ./* 6 */d(3) // 7
}
