tests/snapshots/assets__check_file@unit-comment-comment-in-closure.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-closure.typ
snapshot_kind: text
---
#let conf(
  title: none, //comments
  authors: (),
  abstract: [],
  lang: "zh", // language
  doctype: "book", //comments
  doc, // all comments will be kept by typstyle
) = { doc }

#let f() /* 0 */ = /* 1 */ () => /* 2 */ none
#let g(..) /* 0 */ = /* 1 */ () => /* 2 */ none
#let h(..) /* 0 */ = /* 1 */ () => /* 2 */ { none }

#let f = /* 0 */ () /* 1 */ => /* 2 */ none
#let g = /* 0 */ (..) /* 1 */ => /* 2 */ none
#let h = /* 0 */ (..) /* 1 */ => /* 2 */ { none }
